# Orion-AI

./: .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  main.py  orion.bat  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  run_debug.py  setup.bat  setup.py  ui.py
.github/workflows/: ci.yml
actions/: browser_control.py  circuit_from_image.py  classroom.py  code_helper.py  computer_control.py  computer_settings.py  desktop.py  dev_agent.py  file_controller.py  file_processor.py  flight_finder.py  game_updater.py  gog_auth.py  google_drive.py  iot.py  live_stubs.py  notebooklm_research.py  open_app.py  proteus_autodraw.py  reminder.py  screen_processor.py  send_message.py  weather_report.py  web_search.py  youtube_video.py
actions/iot/: __init__.py  config.py  control.py  devices.py  rules.py  scenes.py  sensor_log.py  sensors.py  sheets_sync.py
actions/iot/transports/: __init__.py  base.py  mqtt_tx.py  serial_tx.py
actions/notifications/: __init__.py  base.py  classroom.py  gmail.py  poller.py  store.py
agent/: error_handler.py  executor.py  orchestra_admin.py  planner.py  registry.py  task_queue.py
arduino/access_control_fingerprint/: access_control_fingerprint.ino
arduino/dht_bh1750_sensores/: dht_bh1750_sensores.ino
arduino/focos_lm35/: focos_lm35.ino
arduino/gps_neo6m_bridge/: gps_neo6m_bridge.ino
arduino/wifi_scanner/: wifi_scanner.ino
config/: __init__.py  access.example.json  agents.json  api_keys.example.json  api_keys.json  browser.json  credentials.json  gdrive_token.json  hotkeys.json  iot_config.json  iot_sheets.json  mcp_servers.json  notifications.json  notifications_store.json  providers.example.json  skills.json  telegram.example.json  theme.py  theme_tokens.py
core/: ask_user.py  cli_installer.py  gemini.py  logger.py  mcp_client.py  mcp_recipes.py  prompt.txt  skill_scanner.py  skills.py  tool_registry.py  tools_bootstrap.py
core/llm/: __init__.py  base.py  gemini_provider.py  openai_compat.py
data/: iot_sensor_log.csv
docs/: SETUP_GOOGLE_OAUTH.md  notebooklm.md
memory/: config_manager.py  conversations.json  conversations.py  long_term.json  memory_manager.py  quick_notes.json  quick_notes.py
orion/: __init__.py  __main__.py  _helpers.py  audio.py  bootstrap.py  live_session.py  runtime.py
orion/actions/: browser_control.py  circuit_from_image.py  classroom.py  code_helper.py  computer_settings.py  dev_agent.py  file_controller.py  flight_finder.py  google_drive.py  live_stubs.py  screen_processor.py  send_message.py  weather_report.py
orion/actions/iot/: control.py  rules.py  sensor_log.py
orion/actions/notifications/: classroom.py  store.py
orion/adapters/: __init__.py
orion/adapters/google/: __init__.py  google_drive.py  notebooklm_research.py
orion/adapters/iot/: access_control.py  config.py  control.py  devices.py  sensor_log.py  sensors.py  sheets_sync.py
orion/adapters/messaging/: __init__.py  telegram.py
orion/adapters/system/: __init__.py  computer_control.py  desktop.py  file_processor.py  game_updater.py  gog_auth.py  open_app.py  proteus_autodraw.py  reminder.py
orion/agent/: error_handler.py  executor.py  orchestra_admin.py  planner.py  registry.py  task_queue.py
orion/cli/: __init__.py
orion/config/: __init__.py  theme.py  theme_tokens.py
orion/core/: ask_user.py  chat_brain.py  cli_installer.py  client_context.py  correlation.py  gemini.py  logger.py  mcp_client.py  mcp_recipes.py  prompt.txt  skill_scanner.py  skills.py  tool_registry.py  tools_bootstrap.py
orion/core/llm/: __init__.py  (+4 more)
orion/domain/: __init__.py
orion/plugins/: __init__.py  base.py  example_plugin.py
orion/server/: __init__.py  access_auth.py  app.py  event_bus.py  sharing.py  status_summary.py  telegram_bridge.py  telegram_commands.py  telemetry.py  ws.py
orion/services/: __init__.py  _bus_publisher.py  conversations_service.py  memory_service.py  notes_service.py
orion/storage/: sqlite_db.py
orion/utils/: cache.py
packaging/: orion_backend.spec
plugins/: __init__.py  base.py  example_plugin.py
scripts/: audit_mobile.py  build.ps1  build.sh  dump_openapi.py
server/: __init__.py  app.py  event_bus.py  fanout.py  sharing.py  telemetry.py  ws.py
server/routes/: __init__.py  agent.py  circuit.py  conversations.py  files.py  integrations.py  iot.py  mcp.py  memory.py  notebooklm.py  notes.py  notifications.py  settings.py  skills.py
skills/hello-world/: SKILL.md
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
storage/: __init__.py  sqlite_db.py
tests/: conftest.py  test_access_event_auth.py  test_agent_registry.py  test_brain_routes.py  test_chat_brain.py  test_crud_endpoints.py  test_event_bus_contract.py  test_file_controller_bulk_delete.py  test_file_controller_power.py  test_files_upload.py  test_iot.py  test_llm_providers.py  test_logger_secret_filter.py  test_mcp_client.py  test_mcp_recipes_stars.py  test_mcp_registry_proxy.py  test_mcp_routes.py  test_notification_poller_classify.py  test_notification_store_sqlite.py  test_onboarding_routes.py  test_orchestra_admin.py  test_packaging.py  test_phase3b_endpoints.py  test_security_hardening.py  test_server_app.py  test_spa_serving.py  test_status_summary.py  test_telegram_chat_bridge.py  test_telegram_commands.py  test_telegram_topic_routing.py  test_tool_registry.py  test_ui_mode.py  test_user_data_home.py
tests/fixtures/: fake_mcp_server.py
tools/: esp32_sensor_simulator.py  esp32_simulator.py
ui_components/: chat_panel.py  history_panel.py  latex_render.py  memory_panel.py  notes_panel.py  onboarding.py  settings_panel.py  theme_bus.py
utils/: cache.py
web/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/public/: manifest.webmanifest  sw.js
web/scripts/: check-api-types-fresh.mjs
web/src/: App.tsx  main.tsx  styles.css  types.ts
wokwi/reles/: diagram.json  sketch.ino
wokwi/sensores/: diagram.json  sketch.ino
(+137 files in other folders)
