[package]
name = "orion"
version = "0.1.0"
description = "O.R.I.O.N — asistente personal multimodal"
authors = ["zahirpadilla92@gmail.com"]
license = ""
repository = "https://github.com/Zero0889/O.R.I.O.N---IA"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri      = { version = "1.6", features = [ "shell-sidecar", "shell-open", "process-command-api", "process-exit"] }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# Por defecto compilamos contra el WebView del SO; en CI/dev podemos
# habilitar `custom-protocol` para producción optimizada.
default      = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
